Added material to user add/edit and finish covtest material

--- a/angular-app/src/app/components/CovtestCrud/add-covtest/add-covtest.component.html
+++ b/angular-app/src/app/components/CovtestCrud/add-covtest/add-covtest.component.html
@@ -29,7 +29,7 @@
 
         <p>Faz parte de um Trabalho de risco?</p>
         <mat-form-field>
-            <mat-label> Grupo de risco</mat-label>
+            <mat-label> Trabalho de risco</mat-label>
             <select id="riskJob" [(ngModel)]="testData.riskJob" matNativeControl required>
                 <option value="yes">Sim</option>
                 <option value="no">Não</option>
@@ -38,7 +38,7 @@
 
         <p>Foi encaminhado pela saude 24?</p>
         <mat-form-field>
-            <mat-label> Grupo de risco</mat-label>
+            <mat-label> Saude 24</mat-label>
             <select id="saude24" [(ngModel)]="testData.saude24" matNativeControl required>
                 <option value="true">Sim</option>
                 <option value="false">Não</option>
