--- a/angular-app/src/app/components/Dashboards/admin-dashboard/admin-dashboard.component.sass
+++ b/angular-app/src/app/components/Dashboards/admin-dashboard/admin-dashboard.component.sass
@@ -105,8 +105,5 @@ h1
 #search
     margin-top: 25px
 
-
-#search2
-    text-align: center
-    margin-top: 9px
-    padding-left: 8px
+#dateSearch
+    margin-top: 10px
