--- a/angular-app/src/app/components/my-profile/my-profile.component.html
+++ b/angular-app/src/app/components/my-profile/my-profile.component.html
@@ -31,7 +31,7 @@
                 <mat-label color="primary">Password Nova</mat-label>
                 <input matInput [(ngModel)]="password" name="password" type="password" placeholder="new passwrod"
                     required>
-            </mat-form-field>
+            </mat-form-field><br>
             <button id="submit" mat-raised-button (click)="changePass()">submeter</button>
         </div>
 
