--- a/angular-app/src/app/components/UserCrud/edit-user/edit-user.component.html
+++ b/angular-app/src/app/components/UserCrud/edit-user/edit-user.component.html
@@ -145,10 +145,7 @@
     <div *ngIf="ExtUserData.role==='EXT'" id="container">
 
         <mat-card id="testsCard">
-
-            <mat-card-title>
-                <p>Testes Associados</p>
-            </mat-card-title>
+            <p>Lista de Testes</p>
 
             <div id="ExtTests">
 
