--- a/angular-app/src/app/components/UserCrud/edit-user/edit-user.component.sass
+++ b/angular-app/src/app/components/UserCrud/edit-user/edit-user.component.sass
@@ -7,7 +7,7 @@
 #techForm, #extForm
     display: flex
     justify-content: center
-    margin-top: 50px
+    margin-top: 20px
 
     ::ng-deep .mat-form-field-empty.mat-form-field-label 
         color: black
@@ -25,14 +25,14 @@
         background-color: black !important
 
     #userFormCard
-        width: 30%
+        width: 40%
         background-color: #F5F5F5
 
         #inputLeft
             left: 30%
 
         #inputLeft2
-            left: 45%
+            left: 60%
         
         label
             color: black
@@ -56,15 +56,20 @@
 #container
     display: flex
     justify-content: center
+    height: 300px
         
     #testsCard
         margin-top: 20px
-        width: 30%
-        height: 430px
+        width: 40%
+        height: 100%
         background-color: #F5F5F5
+
+        p
+            color: black
 
         .mat-card-title
             color: black
+            heigh: 50px
 
         #ExtTests
             height: 85%
