--- a/angular-app/src/app/components/CovtestCrud/edit-covtest/edit-covtest.component.html
+++ b/angular-app/src/app/components/CovtestCrud/edit-covtest/edit-covtest.component.html
@@ -27,7 +27,7 @@
                 <select id="userStatus" [(ngModel)]="userStatus">
                     <option value="suspeito">Suspeito</option>
                     <option value="infetado">Infetado</option>
-                    <option value="saudavel">Saudavel</option>
+                    <option value="saudavel">Saudável</option>
                 </select><br>
                 <button mat-raised-button (click)="updateUsrStatus( covtest.code )">Atualizar estado de
                     utilizador</button>
