--- a/angular-app/src/app/components/Dashboards/admin-dashboard/admin-dashboard.component.html
+++ b/angular-app/src/app/components/Dashboards/admin-dashboard/admin-dashboard.component.html
@@ -77,7 +77,7 @@
 
 
                 <form name="nTestsPerson">
-                    <label id="dateLabel" for="ntests">Pesquisar nº testes por ID de utente: </label>
+                    <label id="dateLabel" for="ntests">Pesquisar nº de testes por ID de utente: </label>
                     <input [(ngModel)]="userCode" id="ntests" name="ntests" />
                 </form>
                 <button id="search" mat-raised-button type="submit" form="dateForm" value="Submit"
